--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -17,6 +17,7 @@
             </div>
         </header>
 
+
         <nav class="navbar navbar-expand navbar-dark bg-dark">
             <ul class="navbar-nav nav-fill w-100">
                 <li class="nav-item"><a href="/intro" class="nav-link">프로젝트 소개</a></li>
@@ -28,6 +29,18 @@
             </ul>
         </nav>
 
+        <div id="main">
+            <div class="row"></div>
+            <div class="col-12">
+                <h1 class="display-1 text-center p-3">超機密 PROJECT 補完計劃</h1>
+            </div>
+            <div class="col-6 offset-3">
+                <img src="/assets/img/loop.jpg">
+            </div>
+            </div><!-- title, image -->
+            <div class="row"></div><!-- hero -->
+            <div class="row"></div><!-- article -->
+        </div>
 
 
         <footer>
