--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -34,11 +34,18 @@
             <div class="col-12">
                 <h1 class="display-1 text-center p-3">超機密 PROJECT 補完計劃</h1>
             </div>
-            <div class="col-6 offset-3">
-                <img src="/assets/img/loop.jpg">
-            </div>
+                <div class="col-6 offset-3">
+                    <img src="/assets/img/loop.jpg">
+                </div>
             </div><!-- title, image -->
-            <div class="row"></div><!-- hero -->
+
+            <div class="row">
+                <div class="col-8 offset-2 text-center p-3">
+                    <p>Mauris tincidunt egestas leo et condimentum. Ut vulputate at augue id pharetra. Donec vehicula quis dui gravida feugiat. Donec a elit enim. Nunc blandit blandit rhoncus. Integer aliquam viverra lacus, a tincidunt nibh mollis ac. Pellentesque suscipit eros justo, ac auctor est lobortis quis. Quisque est elit, ultricies aliquam accumsan at, pharetra vel risus. Aliquam mauris turpis, maximus sed odio id, rhoncus tempor enim.</p>
+                    <div><button type="button" class="btn btn-success">
+                        지금 바로 시작하기</button></div>
+                </div>
+            </div><!-- hero -->
             <div class="row"></div><!-- article -->
         </div>
 
