index: article 추가

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -12,8 +12,8 @@
         <header class="row">
             <div class="col"><h1 id="logo">Lorem Ipsum</h1></div>
             <div class="col text-end">
-                <button type="button" class="btn btn-danger">로그인</button>
-                <button type="button" class="btn btn-primary">회원가입</button>
+                <button type="button" class="btn btn-danger mt-2">로그인</button>
+                <button type="button" class="btn btn-primary mt-2">회원가입</button>
             </div>
         </header>
 
@@ -46,7 +46,45 @@
                         지금 바로 시작하기</button></div>
                 </div>
             </div><!-- hero -->
-            <div class="row"></div><!-- article -->
+
+            <div class="row m-4">
+                <div class="col-4 my-4">
+                    <h2>極秘</h2>
+                    <p>Aenean nec felis sit amet sem consectetur semper sit amet sit amet nunc. Donec congue molestie auctor. Aenean semper arcu id odio vehicula dictum. Suspendisse faucibus placerat ligula, id posuere odio dignissim vel. Fusce eleifend lectus ac tristique hendrerit. Donec ac interdum ligula. Quisque pellentesque laoreet erat non gravida. Vivamus consequat, augue ac sollicitudin molestie, sem nibh commodo ex, id pellentesque eros lacus et elit. Mauris tempus, quam vel ultricies pretium, lorem nisi tincidunt erat, tempor facilisis odio nisi vitae purus. Vivamus tempus consectetur ante, ac auctor magna porttitor et. Morbi dictum posuere metus, auctor lacinia turpis ullamcorper rutrum. Ut fermentum, leo vel maximus pellentesque, sem dui malesuada orci, a laoreet libero neque commodo metus. Donec sapien est, pulvinar quis eros quis, tristique fermentum enim. Cras in pulvinar neque.</p>
+                    <div><button type="button" class="btn btn-light">
+                        자세히 보기 &blacktriangleright;</button></div>
+                </div>
+                <div class="col-4 my-4">
+                    <h2>誤謬</h2>
+                    <p>Proin finibus fermentum molestie. Duis auctor pharetra libero, nec varius est condimentum vel. Nam vel enim dolor. Morbi laoreet id augue at convallis. Nunc vel tellus non mauris maximus mollis. Donec at sagittis ante. Mauris dictum diam eu metus maximus efficitur. Nam eget elit purus. Donec nec scelerisque est, sed dignissim ante. Aliquam et fringilla leo. Donec orci ligula, fringilla a nunc nec, semper porttitor massa. Integer est neque, fermentum at lectus a, lacinia luctus mi. Suspendisse non hendrerit nunc.</p>
+                    <div><button type="button" class="btn btn-light">
+                        자세히 보기 &blacktriangleright;</button></div>
+                </div>
+                <div class="col-4 my-4">
+                    <h2>警告</h2>
+                    <p>Pellentesque egestas sem ut turpis placerat pretium. Morbi vitae diam volutpat, tincidunt risus ut, tincidunt elit. Sed at ex eros. Morbi tristique pellentesque massa ut luctus. Nulla maximus dui vitae magna sollicitudin efficitur. Sed sed turpis a turpis finibus aliquam. Aenean eleifend sit amet justo eget cursus. Nunc pharetra scelerisque porta. Nunc at justo id enim rhoncus varius a vel nibh. Suspendisse vehicula nisl vel orci hendrerit, id venenatis tortor mattis. Nam porta urna ac nibh mollis, ac aliquet nunc efficitur. Sed velit urna, eleifend ut ante et, pellentesque mattis ipsum. In nec dolor nisl. Curabitur pulvinar enim sed ante ullamcorper, eu sagittis turpis euismod.</p>
+                    <div><button type="button" class="btn btn-light">
+                        자세히 보기 &blacktriangleright;</button></div>
+                </div>
+                <div class="col-4 my-4">
+                    <h2>危險</h2>
+                    <p>Ut viverra eleifend felis a maximus. Aliquam ullamcorper fringilla pellentesque. Nam in augue nulla. Maecenas vitae purus pharetra, aliquam sem vitae, hendrerit ex. Maecenas et risus lobortis diam volutpat elementum. Pellentesque sed sem dapibus, placerat justo eget, pretium urna. Sed velit felis, pulvinar non molestie a, laoreet vel nisl. Pellentesque non enim in ligula ullamcorper cursus ac ut tellus. Donec ligula risus, molestie sit amet massa nec, rutrum eleifend sem.</p>
+                    <div><button type="button" class="btn btn-light">
+                        자세히 보기 &blacktriangleright;</button></div>
+                </div>
+                <div class="col-4 my-4">
+                    <h2>隔離</h2>
+                    <p>Phasellus dictum, tellus quis imperdiet eleifend, est nulla sagittis nulla, quis scelerisque felis nisl ac quam. Suspendisse rutrum urna a lorem accumsan malesuada. Vivamus vestibulum, est eu sollicitudin tempus, felis metus semper risus, sed ultrices arcu turpis eget mi. In sed rhoncus urna. Nam tincidunt viverra malesuada. Proin auctor mattis risus non bibendum. In orci erat, ultrices a urna sit amet, porta varius metus.</p>
+                    <div><button type="button" class="btn btn-light">
+                        자세히 보기 &blacktriangleright;</button></div>
+                </div>
+                <div class="col-4 my-4">
+                    <h2>制限</h2>
+                    <p>Nulla ut sem pellentesque, faucibus elit quis, tempor libero. Vestibulum massa metus, viverra tristique feugiat sed, mattis sit amet ex. Nulla dapibus nisl non orci ultrices lacinia. Vivamus porttitor elit et urna auctor egestas. Integer sit amet convallis urna, non mattis orci. Ut in nulla ac ex tempus tincidunt a vitae felis. Vivamus interdum eget quam sed viverra. Morbi placerat interdum massa, vel finibus leo maximus vehicula.</p>
+                    <div><button type="button" class="btn btn-light">
+                        자세히 보기 &blacktriangleright;</button></div>
+                </div>
+            </div><!-- article -->
         </div>
 
 
