--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,150 +1,66 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>index</title>
-    <link rel ="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/project.css">
-</head>
-<body>
-    <div class="container">
-        <header class="row">
-            <div class="col"><h1 id="logo">Lorem Ipsum</h1></div>
-            <div class="col text-end">
-                <button type="button" class="btn btn-danger mt-2"
-                data-bs-target="#loginfrm" data-bs-toggle="modal">로그인</button>
-                <button type="button" class="btn btn-primary mt-2">회원가입</button>
-            </div>
-        </header>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultra.net.nz/thymeleaf/layout"
+    layout:decorate="~{layout/template}">
 
-
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
-            <ul class="navbar-nav nav-fill w-100">
-                <li class="nav-item"><a href="/intro" class="nav-link">프로젝트 소개</a></li>
-                <li class="nav-item"><a href="/join/agree" class="nav-link">회원가입</a></li>
-                <li class="nav-item"><a href="/board/list?cpg=1" class="nav-link">게시판</a></li>
-                <li class="nav-item"><a href="/pds/list?cpg=1" class="nav-link">자료실</a></li>
-                <li class="nav-item"><a href="/gallery/list?cpg=1" class="nav-link">갤러리</a></li>
-                <li class="nav-item"><a href="/admin" class="nav-link">관리자</a></li>
-            </ul>
-        </nav>
-
-        <div id="main">
-            <div class="row"></div>
-            <div class="col-12">
-                <h1 class="display-1 text-center p-3">超機密 PROJECT 補完計劃</h1>
-            </div>
-                <div class="col-6 offset-3">
-                    <img src="/assets/img/loop.jpg">
-                </div>
-            </div><!-- title, image -->
-
-            <div class="row">
-                <div class="col-8 offset-2 text-center p-3">
-                    <p>Mauris tincidunt egestas leo et condimentum. Ut vulputate at augue id pharetra. Donec vehicula quis dui gravida feugiat. Donec a elit enim. Nunc blandit blandit rhoncus. Integer aliquam viverra lacus, a tincidunt nibh mollis ac. Pellentesque suscipit eros justo, ac auctor est lobortis quis. Quisque est elit, ultricies aliquam accumsan at, pharetra vel risus. Aliquam mauris turpis, maximus sed odio id, rhoncus tempor enim.</p>
-                    <div><button type="button" class="btn btn-success">
-                        지금 바로 시작하기</button></div>
-                </div>
-            </div><!-- hero -->
-
-            <div class="row m-4">
-                <div class="col-4 my-4">
-                    <h2>極秘</h2>
-                    <p>Aenean nec felis sit amet sem consectetur semper sit amet sit amet nunc. Donec congue molestie auctor. Aenean semper arcu id odio vehicula dictum. Suspendisse faucibus placerat ligula, id posuere odio dignissim vel. Fusce eleifend lectus ac tristique hendrerit. Donec ac interdum ligula. Quisque pellentesque laoreet erat non gravida. Vivamus consequat, augue ac sollicitudin molestie, sem nibh commodo ex, id pellentesque eros lacus et elit. Mauris tempus, quam vel ultricies pretium, lorem nisi tincidunt erat, tempor facilisis odio nisi vitae purus. Vivamus tempus consectetur ante, ac auctor magna porttitor et. Morbi dictum posuere metus, auctor lacinia turpis ullamcorper rutrum. Ut fermentum, leo vel maximus pellentesque, sem dui malesuada orci, a laoreet libero neque commodo metus. Donec sapien est, pulvinar quis eros quis, tristique fermentum enim. Cras in pulvinar neque.</p>
-                    <div><button type="button" class="btn btn-light">
-                        자세히 보기 &blacktriangleright;</button></div>
-                </div>
-                <div class="col-4 my-4">
-                    <h2>誤謬</h2>
-                    <p>Proin finibus fermentum molestie. Duis auctor pharetra libero, nec varius est condimentum vel. Nam vel enim dolor. Morbi laoreet id augue at convallis. Nunc vel tellus non mauris maximus mollis. Donec at sagittis ante. Mauris dictum diam eu metus maximus efficitur. Nam eget elit purus. Donec nec scelerisque est, sed dignissim ante. Aliquam et fringilla leo. Donec orci ligula, fringilla a nunc nec, semper porttitor massa. Integer est neque, fermentum at lectus a, lacinia luctus mi. Suspendisse non hendrerit nunc.</p>
-                    <div><button type="button" class="btn btn-light">
-                        자세히 보기 &blacktriangleright;</button></div>
-                </div>
-                <div class="col-4 my-4">
-                    <h2>警告</h2>
-                    <p>Pellentesque egestas sem ut turpis placerat pretium. Morbi vitae diam volutpat, tincidunt risus ut, tincidunt elit. Sed at ex eros. Morbi tristique pellentesque massa ut luctus. Nulla maximus dui vitae magna sollicitudin efficitur. Sed sed turpis a turpis finibus aliquam. Aenean eleifend sit amet justo eget cursus. Nunc pharetra scelerisque porta. Nunc at justo id enim rhoncus varius a vel nibh. Suspendisse vehicula nisl vel orci hendrerit, id venenatis tortor mattis. Nam porta urna ac nibh mollis, ac aliquet nunc efficitur. Sed velit urna, eleifend ut ante et, pellentesque mattis ipsum. In nec dolor nisl. Curabitur pulvinar enim sed ante ullamcorper, eu sagittis turpis euismod.</p>
-                    <div><button type="button" class="btn btn-light">
-                        자세히 보기 &blacktriangleright;</button></div>
-                </div>
-                <div class="col-4 my-4">
-                    <h2>危險</h2>
-                    <p>Ut viverra eleifend felis a maximus. Aliquam ullamcorper fringilla pellentesque. Nam in augue nulla. Maecenas vitae purus pharetra, aliquam sem vitae, hendrerit ex. Maecenas et risus lobortis diam volutpat elementum. Pellentesque sed sem dapibus, placerat justo eget, pretium urna. Sed velit felis, pulvinar non molestie a, laoreet vel nisl. Pellentesque non enim in ligula ullamcorper cursus ac ut tellus. Donec ligula risus, molestie sit amet massa nec, rutrum eleifend sem.</p>
-                    <div><button type="button" class="btn btn-light">
-                        자세히 보기 &blacktriangleright;</button></div>
-                </div>
-                <div class="col-4 my-4">
-                    <h2>隔離</h2>
-                    <p>Phasellus dictum, tellus quis imperdiet eleifend, est nulla sagittis nulla, quis scelerisque felis nisl ac quam. Suspendisse rutrum urna a lorem accumsan malesuada. Vivamus vestibulum, est eu sollicitudin tempus, felis metus semper risus, sed ultrices arcu turpis eget mi. In sed rhoncus urna. Nam tincidunt viverra malesuada. Proin auctor mattis risus non bibendum. In orci erat, ultrices a urna sit amet, porta varius metus.</p>
-                    <div><button type="button" class="btn btn-light">
-                        자세히 보기 &blacktriangleright;</button></div>
-                </div>
-                <div class="col-4 my-4">
-                    <h2>制限</h2>
-                    <p>Nulla ut sem pellentesque, faucibus elit quis, tempor libero. Vestibulum massa metus, viverra tristique feugiat sed, mattis sit amet ex. Nulla dapibus nisl non orci ultrices lacinia. Vivamus porttitor elit et urna auctor egestas. Integer sit amet convallis urna, non mattis orci. Ut in nulla ac ex tempus tincidunt a vitae felis. Vivamus interdum eget quam sed viverra. Morbi placerat interdum massa, vel finibus leo maximus vehicula.</p>
-                    <div><button type="button" class="btn btn-light">
-                        자세히 보기 &blacktriangleright;</button></div>
-                </div>
-            </div><!-- article -->
+<th:block layout:fragment="content">
+    <div id="main">
+        <div class="row"></div>
+        <div class="col-12">
+            <h1 class="display-1 text-center p-3">超機密 PROJECT 補完計劃</h1>
         </div>
+        <div class="col-6 offset-3">
+            <img src="/assets/img/loop.jpg">
+        </div>
+    </div><!-- title, image -->
 
+    <div class="row">
+        <div class="col-8 offset-2 text-center p-3">
+            <p>Mauris tincidunt egestas leo et condimentum. Ut vulputate at augue id pharetra. Donec vehicula quis dui gravida feugiat. Donec a elit enim. Nunc blandit blandit rhoncus. Integer aliquam viverra lacus, a tincidunt nibh mollis ac. Pellentesque suscipit eros justo, ac auctor est lobortis quis. Quisque est elit, ultricies aliquam accumsan at, pharetra vel risus. Aliquam mauris turpis, maximus sed odio id, rhoncus tempor enim.</p>
+            <div><button type="button" class="btn btn-success">
+                지금 바로 시작하기</button></div>
+        </div>
+    </div><!-- hero -->
 
-        <footer>
-            <h6 class="col text-end bg-dark bg-opacity-10 p-3">
-            Copyright &copy; Lorem Ipsum 2023. taeeun. All rights Reserved.
-            Created by Bootstrap5</h6>
-        </footer>
+    <div class="row m-4">
+        <div class="col-4 my-4">
+            <h2>極秘</h2>
+            <p>Aenean nec felis sit amet sem consectetur semper sit amet sit amet nunc. Donec congue molestie auctor. Aenean semper arcu id odio vehicula dictum. Suspendisse faucibus placerat ligula, id posuere odio dignissim vel. Fusce eleifend lectus ac tristique hendrerit. Donec ac interdum ligula. Quisque pellentesque laoreet erat non gravida. Vivamus consequat, augue ac sollicitudin molestie, sem nibh commodo ex, id pellentesque eros lacus et elit. Mauris tempus, quam vel ultricies pretium, lorem nisi tincidunt erat, tempor facilisis odio nisi vitae purus. Vivamus tempus consectetur ante, ac auctor magna porttitor et. Morbi dictum posuere metus, auctor lacinia turpis ullamcorper rutrum. Ut fermentum, leo vel maximus pellentesque, sem dui malesuada orci, a laoreet libero neque commodo metus. Donec sapien est, pulvinar quis eros quis, tristique fermentum enim. Cras in pulvinar neque.</p>
+            <div><button type="button" class="btn btn-light">
+                자세히 보기 &blacktriangleright;</button></div>
+        </div>
+        <div class="col-4 my-4">
+            <h2>誤謬</h2>
+            <p>Proin finibus fermentum molestie. Duis auctor pharetra libero, nec varius est condimentum vel. Nam vel enim dolor. Morbi laoreet id augue at convallis. Nunc vel tellus non mauris maximus mollis. Donec at sagittis ante. Mauris dictum diam eu metus maximus efficitur. Nam eget elit purus. Donec nec scelerisque est, sed dignissim ante. Aliquam et fringilla leo. Donec orci ligula, fringilla a nunc nec, semper porttitor massa. Integer est neque, fermentum at lectus a, lacinia luctus mi. Suspendisse non hendrerit nunc.</p>
+            <div><button type="button" class="btn btn-light">
+                자세히 보기 &blacktriangleright;</button></div>
+        </div>
+        <div class="col-4 my-4">
+            <h2>警告</h2>
+            <p>Pellentesque egestas sem ut turpis placerat pretium. Morbi vitae diam volutpat, tincidunt risus ut, tincidunt elit. Sed at ex eros. Morbi tristique pellentesque massa ut luctus. Nulla maximus dui vitae magna sollicitudin efficitur. Sed sed turpis a turpis finibus aliquam. Aenean eleifend sit amet justo eget cursus. Nunc pharetra scelerisque porta. Nunc at justo id enim rhoncus varius a vel nibh. Suspendisse vehicula nisl vel orci hendrerit, id venenatis tortor mattis. Nam porta urna ac nibh mollis, ac aliquet nunc efficitur. Sed velit urna, eleifend ut ante et, pellentesque mattis ipsum. In nec dolor nisl. Curabitur pulvinar enim sed ante ullamcorper, eu sagittis turpis euismod.</p>
+            <div><button type="button" class="btn btn-light">
+                자세히 보기 &blacktriangleright;</button></div>
+        </div>
+        <div class="col-4 my-4">
+            <h2>危險</h2>
+            <p>Ut viverra eleifend felis a maximus. Aliquam ullamcorper fringilla pellentesque. Nam in augue nulla. Maecenas vitae purus pharetra, aliquam sem vitae, hendrerit ex. Maecenas et risus lobortis diam volutpat elementum. Pellentesque sed sem dapibus, placerat justo eget, pretium urna. Sed velit felis, pulvinar non molestie a, laoreet vel nisl. Pellentesque non enim in ligula ullamcorper cursus ac ut tellus. Donec ligula risus, molestie sit amet massa nec, rutrum eleifend sem.</p>
+            <div><button type="button" class="btn btn-light">
+                자세히 보기 &blacktriangleright;</button></div>
+        </div>
+        <div class="col-4 my-4">
+            <h2>隔離</h2>
+            <p>Phasellus dictum, tellus quis imperdiet eleifend, est nulla sagittis nulla, quis scelerisque felis nisl ac quam. Suspendisse rutrum urna a lorem accumsan malesuada. Vivamus vestibulum, est eu sollicitudin tempus, felis metus semper risus, sed ultrices arcu turpis eget mi. In sed rhoncus urna. Nam tincidunt viverra malesuada. Proin auctor mattis risus non bibendum. In orci erat, ultrices a urna sit amet, porta varius metus.</p>
+            <div><button type="button" class="btn btn-light">
+                자세히 보기 &blacktriangleright;</button></div>
+        </div>
+        <div class="col-4 my-4">
+            <h2>制限</h2>
+            <p>Nulla ut sem pellentesque, faucibus elit quis, tempor libero. Vestibulum massa metus, viverra tristique feugiat sed, mattis sit amet ex. Nulla dapibus nisl non orci ultrices lacinia. Vivamus porttitor elit et urna auctor egestas. Integer sit amet convallis urna, non mattis orci. Ut in nulla ac ex tempus tincidunt a vitae felis. Vivamus interdum eget quam sed viverra. Morbi placerat interdum massa, vel finibus leo maximus vehicula.</p>
+            <div><button type="button" class="btn btn-light">
+                자세히 보기 &blacktriangleright;</button></div>
+        </div>
+    </div><!-- article -->
     </div>
+</th:block>
 
-    <!-- login modal -->
-    <div class="modal" id="loginfrm" role="dialog"
-         data-bs-backdrop="static" data-bs-keyboard="false">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2>로그인</h2>
-                    <button type="button" class="btn btn-light"
-                    data-bs-dismiss="modal">닫기</button>
-                </div> <!-- mdh -->
-
-                <div class="modal-body">
-                    <form id="lgnfrm" name="lgnfrm" >
-                        <div class="row text-danger mb-3">
-                            <label class="col-4 col-form-label text-end" for="userid">아이디</label>
-                            <div class="col-5">
-                                <input type="text" id="userid" name="userid"
-                                    class="form-control border-danger">
-                            </div> <!-- userid -->
-                        </div>
-                        <div class="row text-danger">
-                            <label class="col-4 col-form-label text-end" for="passwd">비밀번호</label>
-                            <div class="col-5">
-                                <input type="password" id="passwd" name="passwd"
-                                       class="form-control border-danger">
-                            </div><!-- passwd -->
-                        </div>
-                            <div class="row text-warning mb-3">
-                                <label class="col-4">&nbsp;</label>
-                                <div class="col-5">
-                                    <div class="form-check">
-                                        <input type="checkbox" class="form-check-input border-dark">
-                                        <label class="form-check-label">로그인 상태 유지</label>
-                                    </div>
-                                </div>
-                            </div> <!-- auto login -->
-                    </form>
-                </div> <!-- mdb -->
-
-                <div class="modal-footer justify-content-center">
-                    <button type="button" class="btn btn-danger" id="loginbtn">로그인</button>
-                    <button type="button" class="btn btn-warning">아이디/비밀번호 찾기</button>
-                </div> <!-- mdf -->
-            </div> <!-- mdc -->
-        </div> <!-- mdd -->
-    </div>
-
-
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/project.js"></script>
-</body>
 </html>
