--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -22,6 +22,7 @@
 
 
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/c481d3954d.js" crossorigin="anonymous"></script>
 <script src="/assets/js/project.js"></script>
 </body>
 </html>
