--- a/src/main/resources/templates/join/joinme.html
+++ b/src/main/resources/templates/join/joinme.html
@@ -46,7 +46,7 @@
                         <label for="name" class="col-2 col-form-label text-danger text-end">이름</label>
                         <div class="col-3">
                             <input type="text" name="name" id="name"
-                                   class="form-control border-danger bg-light" readonly>
+                                   class="form-control border-danger bg-light" readonly th:value="${session.checkme.name}">
                         </div>
                     </div> <!-- name -->
 
@@ -54,10 +54,12 @@
                         <label for="jumin1" class="col-2 col-form-label text-danger text-end">주민번호</label>
                         <div class="col-3">
                             <input type="text " name="jumin1" id="jumin1"
-                                   class="form-control border-danger bg-light" readonly></div><!-- jumin1 -->
+                                   class="form-control border-danger bg-light"
+                                   readonly th:value="${session.checkme.jumin1}"></div><!-- jumin1 -->
                         <div class="col-3">
                             <input type="password" name="jumin2" id="jumin2"
-                                   class="form-control border-danger bg-light" readonly></div><!-- jumin2 -->
+                                   class="form-control border-danger bg-light"
+                                   readonly th:value="${session.checkme.jumin2}"></div><!-- jumin2 -->
                     </div> <!-- jumin -->
 
 
