--- a/src/main/resources/templates/join/joinme.html
+++ b/src/main/resources/templates/join/joinme.html
@@ -64,9 +64,9 @@
 
 
                     <div class="row mb-3 align-items-center">
-                        <label for="userid" class="col-2 col-form-label text-danger text-end">아이디</label>
+                        <label for="uid" class="col-2 col-form-label text-danger text-end">아이디</label>
                         <div class="col-3">
-                            <input type="text" name="userid" id="userid"
+                            <input type="text" name="userid" id="uid"
                                    class="form-control border-danger">
                         </div>
                         <div class="col-auto">
@@ -77,9 +77,9 @@
                     </div> <!-- user id-->
 
                     <div class="row mb-3 align-items-center">
-                        <label for="passwd" class="col-2 col-form-label text-danger text-end">비밀번호</label>
+                        <label for="pwd" class="col-2 col-form-label text-danger text-end">비밀번호</label>
                         <div class="col-3">
-                            <input type="password" name="passwd" id="passwd"
+                            <input type="password" name="passwd" id="pwd"
                                    class="form-control border-danger">
                         </div>
                         <div class="col-auto">
@@ -113,8 +113,7 @@
                                    class="form-control border-danger bg-light" readonly>
                         </div>
                         <div class="col-3">
-                            <button type="button" id="zipbtn" class="btn btn-dark"
-                                    data-bs-target="#zipmodal" data-bs-toggle="modal">
+                            <button type="button" id="zipbtn" class="btn btn-dark">
                                 <i class="fas fa-circle-question"></i> 우편번호 찾기</button>
                         </div>
                     </div> <!-- zipcode -->
