--- a/src/main/resources/templates/join/checkme.html
+++ b/src/main/resources/templates/join/checkme.html
@@ -116,7 +116,7 @@
                         <button type="button" id="checkbtn1" class="btn btn-primary">
                             <i class="fa-regular fa-circle-check"></i> 확인하기
                         </button>
-                        <button type="button" id="canclebtn1" class="btn btn-danger">
+                        <button type="button" id="cancelbtn1" class="btn btn-danger">
                             <i class="fa-regular fa-circle-xmark"></i> 취소하기
                         </button>
                     </div>
@@ -177,7 +177,7 @@
                         <button type="button" id="checkbtn2" class="btn btn-primary">
                             <i class="fa-regular fa-circle-check"></i> 확인하기
                         </button>
-                        <button type="button" id="canclebtn2" class="btn btn-danger">
+                        <button type="button" id="cancelbtn2" class="btn btn-danger">
                             <i class="fa-regular fa-circle-xmark"></i> 취소하기
                         </button>
                     </div>
