--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -4,15 +4,17 @@
         <header class="row">
             <div class="col"><h1 id="logo">Lorem Ipsum</h1></div>
             <div class="col text-end">
-                <th:block th:if="${#strings.isEmpty(session.member)}">
+                <th:block th:if="${not #strings.startsWith(#request.getRequestURI(),'/join')}">
+                    <th:block th:if="${#strings.isEmpty(session.member)}">
                 <button type="button" class="btn btn-danger mt-2"
                         data-bs-target="#loginfrm" data-bs-toggle="modal">로그인</button>
                 <button type="button" class="btn btn-primary mt-2">회원가입</button>
                 </th:block>
 
-                <th:block th:if="${not #strings.isEmpty(session.member)}">
+                    <th:block th:if="${not #strings.isEmpty(session.member)}">
                 <button type="button" class="btn btn-dark mt-2" id="lgoutbtn">로그아웃</button>
                 <button type="button" class="btn btn-success mt-2">회원정보</button>
+                </th:block>
                 </th:block>
             </div>
         </header>
@@ -28,6 +30,7 @@
                     <th:block th:if="${not #strings.isEmpty(session.member)}">
                         <a href="/join/agree" class="nav-link disabled">회원가입</a>
                     </th:block>
+
                 </li>
                 <li class="nav-item"><a href="/board/list?cpg=1" class="nav-link">게시판</a></li>
                 <li class="nav-item"><a href="/pds/list?cpg=1" class="nav-link">자료실</a></li>
