--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,15 +1,103 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org"
-    xmlns:layout="http://www.ultra.net.nz/thymeleaf/layout"
-    layout:decorate="~{layout/template}">
+<html lang="ko" xmlns:th="https://www.thymeleaf.org"
+      xmlns:layout="http://www.ultra.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/template}">
 
 <th:block layout:fragment="content">
     <div id="main">
         <div class="mt-5">
-            <i class="fa-solid fa-clipboard-list fa-2xl"> 게시판</i>
+            <i class="fa-solid fa-clipboard fa-2xl"> 게시판</i>
             <hr>
         </div>
+
+        <div class="row">
+            <div class="row offset-1 col-7">
+                <div class="col-2">
+                    <select class="form-select" id="findtype">
+                        <option value="title">제목</option>
+                        <option value="userid">아이디</option>
+                        <option value="name">글쓴이</option>
+                        <option value="contents">내용</option>
+                        <option value="titcont">제목+내용</option>
+                    </select>
+                </div>
+                <div class="col-4">
+                    <input type="text" class="form-control col-2" id="findkey">
+                </div>
+                <div class="col-3">
+                    <button type="button" class="btn btn-light" id="findbtn"><i class="fa-solid fa-magnifying-glass"></i> 검색하기</button>
+                </div>
+            </div><!-- 검색 -->
+            <div class="col-3 text-end">
+                <button type="button" class="btn btn-light">
+                    <i class="fa fa-plus-circle"></i> 새글쓰기
+                </button>
+            </div><!-- 새글쓰기 -->
+        </div><!-- 검색 및 새글쓰기 -->
+
+        <div class="row">
+            <div class="offset-1 col-10">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th style="width: 7%">번호</th>
+                        <th>제목</th>
+                        <th style="width: 13%">작성자</th>
+                        <th style="width: 13%">작성일</th>
+                        <th style="width: 7%">추천</th>
+                        <th style="width: 7%">조회</th>
+                    </tr>
+                    </thead><!-- 머리글 -->
+                    <tbody>
+                    <tr>
+                        <th>공지</th>
+                        <th><span class="badge text-bg-danger">hot!</span>
+                            성탄절, 대체공휴일 확정!</th>
+                        <th>운영자</th>
+                        <th>2023-05-01</th>
+                        <th>666</th>
+                        <th>1234</th>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>시간은 금이라구! 친구~</td>
+                        <td>운영자</td>
+                        <td>2023-05-01</td>
+                        <td>666</td>
+                        <td>1234</td>
+                    </tr>
+
+                    </tbody><!-- 본문 -->
+                </table>
+            </div>
+        </div><!-- 게시판 리스트 -->
+
+        <div class="row">
+            <div class="offset-1 col-10">
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item"><a href="#" class="page-link">처음</a></li>
+                        <li class="page-item"><a href="#" class="page-link">이전</a></li>
+
+                        <li class="page-item"><a href="#" class="page-link">1</a></li>
+                        <li class="page-item"><a href="#" class="page-link">2</a></li>
+                        <li class="page-item"><a href="#" class="page-link">3</a></li>
+                        <li class="page-item"><a href="#" class="page-link">4</a></li>
+                        <li class="page-item active"><a href="#" class="page-link">5</a></li>
+                        <li class="page-item"><a href="#" class="page-link">6</a></li>
+                        <li class="page-item"><a href="#" class="page-link">7</a></li>
+                        <li class="page-item"><a href="#" class="page-link">8</a></li>
+                        <li class="page-item"><a href="#" class="page-link">9</a></li>
+                        <li class="page-item"><a href="#" class="page-link">10</a></li>
+
+                        <li class="page-item"><a href="#" class="page-link">다음</a></li>
+                        <li class="page-item"><a href="#" class="page-link">끝</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div><!-- 게시판 페이지네이션 -->
+
     </div>
 </th:block>
-
 </html>
