--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -91,10 +91,12 @@
                         <li th:class="${(cpg - 1 gt 0) ? 'page-item' : 'page-item disabled'}">
                             <a th:href="|${pglink}${cpg - 1}|" class="page-link">이전</a></li>
 
-                        <th:block th:each="i : ${#numbers.sequence(1, 10)}">
-                        <li th:class="${(i ne cpg) ? 'page-item' : 'page-item active'}">
-                            <a  th:href="|${pglink}${i}|" class="page-link"
-                                th:text="${i}">1</a></li>
+                        <th:block th:each="i : ${#numbers.sequence(stpg, stpg+9)}">
+                            <!-- 출력페이지i가 총페이지수cntpg 보다 작거나 같으면 출력 -->
+                            <th:block th:if="${i le cntpg}">
+                                <li th:class="${(i ne cpg) ? 'page-item' : 'page-item active'}">
+                                <a  th:href="|${pglink}${i}|" class="page-link" th:text="${i}">1</a></li>
+                            </th:block>
                         </th:block>
 
                         <!-- '현재페이지 +1' 총페이지수보다 작으면 '다음' 링크 활성 -->
