join : javascript 추가

--- a/src/main/resources/templates/join/checkme.html
+++ b/src/main/resources/templates/join/checkme.html
@@ -190,5 +190,7 @@
         </div><!-- buttons-->
 
     </div>
+
+    <script src="/assets/js/join.js" charset="utf-8"></script>
 </th:block>
 </html>
