--- a/src/main/resources/templates/join/agree.html
+++ b/src/main/resources/templates/join/agree.html
@@ -465,6 +465,8 @@ QR코드 등록 정보 : 삭제 시점으로부터 6개월 보관
 
 
     </div>
+
+    <script src="/assets/js/join.js" charset="utf-8"></script>
 </th:block>
 
 </html>
