board : javascript 추가

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -117,5 +117,7 @@
         </div><!-- 게시판 페이지네이션 -->
 
     </div>
+
+    <script src="/assets/js/board.js" charset="utf-8"></script>
 </th:block>
 </html>
