--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -76,6 +76,8 @@
         </div> <!-- 새글쓰기 폼 -->
 
     </div>
+
+    <script src="/assets/js/board.js" charset="utf-8"></script>
 </th:block>
 
 </html>
